# rs-ali-sts

./: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  README_CN.md
.github/workflows/: ci.yml
src/: blocking.rs  client.rs  config.rs  credential.rs  error.rs  exec.rs  lib.rs  request.rs  response.rs  sign.rs
tests/: blocking.rs  integration.rs  live.rs
