[package]
name = "rs-ali-sts"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Alibaba Cloud STS (Security Token Service) SDK for Rust"
license = "MIT"
repository = "https://github.com/infinitete/rs-ali-sts"
homepage = "https://github.com/infinitete/rs-ali-sts"
documentation = "https://docs.rs/rs-ali-sts"
keywords = ["alibaba-cloud", "aliyun", "sts", "security-token"]
categories = ["api-bindings", "authentication"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
blocking = ["reqwest/blocking"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mockito = "1"
